--- a/src/main/features/response/components/payment-intention/payment-option.njk
+++ b/src/main/features/response/components/payment-intention/payment-option.njk
@@ -2,8 +2,8 @@
 
 {% from "form.njk" import saveAndContinueButton, csrfProtection, radioGroup, radioGroupWithHintPanel, errorSummary %}
 
-{% if draft.partialAdmission.howMuchDoYouOwe.amount %}
-  {% set heading = t('When do you want to pay the {{ amount }}?', { amount: draft.partialAdmission.howMuchDoYouOwe.amount | numeral }) %}
+{% if amount %}
+  {% set heading = t('When do you want to pay the {{ amount }}?', { amount: amount | numeral }) %}
 {% else %}
   {% set heading = 'When do you want to pay?' %}
 {% endif %}
