--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -35,6 +35,58 @@
 
     {{ tableEnd() }}
 
+    {{ tableStart('howYouWnatToProceed', 'How you wish to proceed') }}
+    {% if draft.formaliseRepaymentPlan %}
+      {% if draft.formaliseRepaymentPlan.option.value === FormaliseRepaymentPlanOption.SIGN_SETTLEMENT_AGREEMENT.value %}
+        {% set formaliseRepaymentPlanResponse = 'Sign a settlement agreement' %}
+      {% else %}
+        {% set formaliseRepaymentPlanResponse = 'Request a County Court Judgment (CCJ)' %}
+      {% endif %}
+      {{ row(label = 'How do you want to formalise the repayment plan?', bold = true, value = formaliseRepaymentPlanResponse,
+        changeLink = ClaimantResponsePaths.chooseHowToProceedPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
+    {% endif %}
+    {{ tableEnd() }}
+
+    {{ tableStart('settlementAgreement', 'Settlement agreement') }}
+
+    {% if claim.response.paymentIntention.paymentDate %}
+      {{ row(label = 'The offer',
+        value = t('{{ defendantFullName }} will pay the full amount, no later than {{ paymentDate }}',
+          {
+            defendantFullName: claim.response.defendant.name,
+            paymentDate: claim.response.paymentIntention.paymentDate | date
+          }
+        ),
+        bottomBorder = true, bold = true,
+        changeLink = ClaimantResponsePaths.signSettlementAgreementPage.evaluateUri({ externalId: claim.externalId })
+      ) }}
+      {{ row(label = 'Completion date',
+        value = claim.response.paymentIntention.paymentDate | date,
+        bottomBorder = true, bold = true,
+        changeLink = ClaimantResponsePaths.signSettlementAgreementPage.evaluateUri({ externalId: claim.externalId })
+      ) }}
+    {% else %}
+      {{ row(label = 'The offer',
+        value = t('{{ defendantFullName }} will pay instalments of {{ instalmentAmount }} every month. The first instalment will be paid by {{ firstPaymentDate }}.',
+          { defendantFullName: claim.response.defendant.name,
+            instalmentAmount: claim.response.paymentIntention.repaymentPlan.instalmentAmount | numeral,
+            firstPaymentDate: claim.response.paymentIntention.repaymentPlan.firstPaymentDate | date
+          }),
+        bottomBorder = true, bold = true,
+        changeLink = ClaimantResponsePaths.signSettlementAgreementPage.evaluateUri({ externalId: claim.externalId })
+      ) }}
+      {{ row(label = 'Completion date',
+        value = lastPaymentDate | date,
+        bottomBorder = true, bold = true,
+        changeLink = ClaimantResponsePaths.signSettlementAgreementPage.evaluateUri({ externalId: claim.externalId })
+      ) }}
+    {% endif %}
+
+    {% if draft.settlementAgreement and draft.settlementAgreement.signed %}
+
+    {% endif %}
+    {{ tableEnd() }}
+
     {{ submitButton('Submit response') }}
 
   </form>
