--- a/src/main/features/claimant-response/views/sign-settlement-agreement.njk
+++ b/src/main/features/claimant-response/views/sign-settlement-agreement.njk
@@ -7,7 +7,12 @@
 {% block content %}
   <div class="grid-row">
     <div class="column-two-thirds">
-      <form novalidate method="post">
+      <form method="post"
+            class="analytics-submit-event-trigger"
+            data-event-action="Claimant: Terms of the agreement"
+            data-event-label-from="signed"
+            novalidate>
+
         {{ csrfProtection(csrf) }}
 
         {{ termsOfAgreement (
