--- a/src/main/views/macro/financialDetails.njk
+++ b/src/main/views/macro/financialDetails.njk
@@ -15,20 +15,55 @@
   </div>
 {% endmacro %}
 
-{% macro employmentStatus(statementOfMeans) %}
-  {% if statementOfMeans.employment %}
-    {% set status = 'Employed' if statementOfMeans.employment.employers %}
-    {% if statementOfMeans.employment.selfEmployment %}
-      {% if status %}
-        {% set status = status + ' and ' %}
-      {% endif %}
-      {% set status = status + ' Self-employed ' %}
+{% macro bankAccountsSection(bankAccounts) %}
+  {% for bankAccount in bankAccounts %}
+    {% if bankAccounts.length === 1 %}
+      {{ row(label = 'Type of account', value = bankAccount.type | renderBankAccountType, bottomBorder = false) }}
+    {% else %}
+      {{ row(label = loop.index0 + 1 + '. Type of account', value = bankAccount.type | renderBankAccountType, bottomBorder = false) }}
     {% endif %}
-    {{ row(label = 'Type of job', value = status) }}
-  {% else %}
-    {% if statementOfMeans.unemployment.unemployed %}
-      {% set years = statementOfMeans.unemployment.unemployed.numberOfYears %}
-      {% set months = statementOfMeans.unemployment.unemployed.numberOfMonths %}
+    {{ row(label = 'Balance', value = bankAccount.balance | numeral, bottomBorder = false) }}
+    {{ row(label = 'Joint account', value = bankAccount.joint | renderYesNo, bottomBorder = loop.index0 === bankAccounts.length - 1) }}
+  {% endfor %}
+{% endmacro %}
+
+{% macro resideceneSection(residence) %}
+  {{ row(label = 'Where are you living?	', value = residence.type | renderResidenceType) }}
+{% endmacro %}
+
+{% macro childrenSection(children) %}
+  {{ row(label = 'Do any children live with them?', value = (children !== undefined) | renderYesNo, bottomBorder = not children) }}
+  {% if children %}
+    {% for child in children %}
+      {{ row(label = 'How many are aged ' + (child.ageGroupType | renderAgeGroupType) + '?', value = child.numberOfChildren | default('0'), bottomBorder = loop.index0 === children.length - 1) }}
+      {% if child.ageGroupType === 'BETWEEN_16_AND_19' and child.numberOfChildren > 0 %}
+        {{ row(label = 'How many aged ' + (child.ageGroupType | renderAgeGroupType) + ' are in full-time education or training?', value = child.numberOfChildrenLivingWithYou | default('0')) }}
+      {% endif %}
+    {% endfor %}
+  {% endif %}
+{% endmacro %}
+
+{% macro maintenanceSection(numberOfMaintainedChildren) %}
+  {{ row(label = 'Do they or their partner pay maintenance for any children?', value = (numberOfMaintainedChildren > 0) | renderYesNo, bottomBorder = not numberOfMaintainedChildren > 0) }}
+  {% if numberOfMaintainedChildren > 0 %}
+    {{ row(label = 'Number of children', value = numberOfMaintainedChildren) }}
+  {% endif %}
+{% endmacro %}
+
+{% macro otherDependantsSection(otherDependants) %}
+  {{ row(label = 'Do they support anyone else financially?', value = (otherDependants !== undefined) | renderYesNo, bottomBorder = not otherDependants) }}
+  {% if otherDependants %}
+    {{ row(label = 'Number of people', value = otherDependants.numberOfPeople, bottomBorder = false) }}
+    {{ row(label = 'Give details', value = otherDependants.details) }}
+  {% endif %}
+{% endmacro %}
+
+{% macro employmentSection(employment) %}
+  {{ row(label = 'Do they have a job?', value = (employment.employers.length > 0 or employment.selfEmployment) | renderYesNo, bottomBorder = false) }}
+  {% if employment.unemployment %}
+    {% if employment.unemployment.unemployed %}
+      {% set years = employment.unemployment.unemployed.numberOfYears %}
+      {% set months = employment.unemployment.unemployed.numberOfMonths %}
 
       {% set status = 'Unemployed' %}
       {% if years or months %}
@@ -40,14 +75,76 @@
           {% set status = status + singularOrPlural(months, 'month') %}
         {% endif %}
       {% endif %}
-
-      {{ row(label = 'Type of job', value = status) }}
-    {% elseif statementOfMeans.unemployment.retired %}
-      {{ row(label = 'Type of job', value = 'Retired') }}
+    {% elseif employment.unemployment.retired %}
+      {% set status = 'Retired' %}
     {% else %}
-      {{ row(label = 'Type of job', value = statementOfMeans.unemployment.other) }}
+      {% set status = employment.unemployment.other %}
+    {% endif %}
+  {% else %}
+    {% set status = 'Employed' if employment.employers %}
+    {% if employment.selfEmployment %}
+      {% if status %}
+        {% set status = status + ' and ' %}
+      {% endif %}
+      {% set status = status + ' Self-employed ' %}
     {% endif %}
   {% endif %}
+  {{ row(label = 'Type of job', value = status) }}
+  {% if employment.employers.length > 0 %}
+    {% for employer in employment.employers %}
+      {{ row(label = 'Employer name', value = employer.name, bottomBorder = false) }}
+      {{ row(label = 'Job title', value = employer.jobTitle, bottomBorder = loop.index0 === employment.employers.length - 1) }}
+    {% endfor %}
+  {% endif %}
+{% endmacro %}
+
+{% macro selfEmploymentSection(selfEmployment) %}
+  {{ row(label = 'Job title', value = selfEmployment.jobTitle, bottomBorder = false) }}
+  {{ row(label = 'Annual turnover', value = selfEmployment.annualTurnover | numeral, bottomBorder = not selfEmployment.onTaxPayments) }}
+  {{ row(label = 'Are you behind on tax payments?', value = (selfEmployment.onTaxPayments !== undefined) | renderYesNo, bottomBorder = false) }}
+  {{ row(label = 'Amount they owe?', value = selfEmployment.onTaxPayments.amountYouOwe | numeral, bottomBorder = false) }}
+  {{ row(label = 'Reason', value = selfEmployment.onTaxPayments.reason) }}
+{% endmacro %}
+
+{% macro monthlyIncomesSection(incomes) %}
+  {% if incomes %}
+    {% for income in incomes %}
+      {{ row(label = income.type | renderIncomeType | capitalize, value = income.amountReceived | numeral, bottomBorder = loop.index0 === incomes.length - 1) }}
+    {% endfor %}
+  {% else %}
+    {{ row(label = 'Do they receive any income?', value = 'No') }}
+  {% endif %}
+{% endmacro %}
+
+{% macro monthlyExpensesSection(expenses) %}
+  {% if expenses %}
+    {% for expense in expenses %}
+      {{ row(label = expense.type | renderExpenseType | capitalize, value = expense.amountPaid | numeral, bottomBorder = loop.index0 === expenses.length - 1) }}
+    {% endfor %}
+  {% else %}
+    {{ row(label = 'Do they pay any expenses?', value = 'No') }}
+  {% endif %}
+{% endmacro %}
+
+{% macro debtsSection(debts) %}
+  {{ row(label = 'Do you have any debts?', value = (debts !== undefined) | renderYesNo, bottomBorder = not debts) }}
+  {% for debt in debts %}
+    {% if debts.length === 1 %}
+      {{ row(label = 'Debt' , value = debt.description, bottomBorder = false) }}
+    {% else %}
+      {{ row(label = loop.index0 + 1 + '. Debt' , value = debt.description, bottomBorder = false) }}
+    {% endif %}
+    {{ row(label = 'Total owed', value = debt.totalOwed | numeral, bottomBorder = false) }}
+    {{ row(label = 'Monthly Payments', value = debt.monthlyPayments | numeral, bottomBorder = loop.index0 === debts.length - 1) }}
+  {% endfor %}
+{% endmacro %}
+
+{% macro courtOrdersSection(courtOrders) %}
+  {{ row(label = 'Has a court ordered you to pay anyone else?', value = (courtOrders !== undefined) | renderYesNo, bottomBorder = not courtOrders) }}
+  {% for courtOrder in courtOrders %}
+    {{ row(label = 'Claim number', value = courtOrder.claimNumber, bottomBorder = false) }}
+    {{ row(label = 'Amount you owe', value = courtOrder.amountOwed | numeral, bottomBorder = loop.index0 === courtOrders.length - 1) }}
+  {% endfor %}
 {% endmacro %}
 
 {% macro financialDetailsTable(label, statementOfMeans) %}
@@ -55,98 +152,37 @@
     <summary>{{ t(label) }}</summary>
     <div class="panel">
       {{ heading('Bank and savings accounts') }}
-
-      {% for account in statementOfMeans.bankAccounts %}
-        {% if statementOfMeans.bankAccounts.length === 1 %}
-          {{ row(label = 'Type of account', value = account.type | renderBankAccountType, bottomBorder = false) }}
-        {% else %}
-          {{ row(label = loop.index0 + 1 + '. Type of account', value = account.type | renderBankAccountType, bottomBorder = false) }}
-        {% endif %}
-        {{ row(label = 'Balance', value = account.balance | numeral, bottomBorder = false) }}
-        {{ row(label = 'Joint account', value = account.joint | renderYesNo, bottomBorder = loop.index0 === statementOfMeans.bankAccounts.length - 1) }}
-      {% endfor %}
-      {{ row(label = 'Where are you living?	', value = statementOfMeans.residence.type | renderResidenceType) }}
+      {{ bankAccountsSection(statementOfMeans.bankAccounts) }}
+      {{ resideceneSection(statementOfMeans.residence) }}
 
       {{ heading('Children') }}
-
-      {{ row(label = 'Do any children live with them?', value = (statementOfMeans.dependant.children !== undefined) | renderYesNo, bottomBorder = not statementOfMeans.dependant.children) }}
-      {% if statementOfMeans.dependant.children %}
-        {% for child in statementOfMeans.dependant.children %}
-          {{ row(label = 'How many are aged ' + (child.ageGroupType | renderAgeGroupType) + '?', value = child.numberOfChildren | default('0'), bottomBorder = loop.index0 === statementOfMeans.dependant.children.length - 1) }}
-          {% if child.ageGroupType === 'BETWEEN_16_AND_19' and child.numberOfChildren > 0 %}
-            {{ row(label = 'How many aged ' + (child.ageGroupType | renderAgeGroupType) + ' are in full-time education or training?', value = child.numberOfChildrenLivingWithYou | default('0')) }}
-          {% endif %}
-        {% endfor %}
-      {% endif %}
+      {{ childrenSection(statementOfMeans.dependant.children) }}
 
       {{ heading('Maintenance') }}
-
-      {{ row(label = 'Do they or their partner pay maintenance for any children?', value = (statementOfMeans.dependant.numberOfMaintainedChildren > 0) | renderYesNo, bottomBorder = not statementOfMeans.dependant.numberOfMaintainedChildren > 0) }}
-      {% if statementOfMeans.dependant.numberOfMaintainedChildren > 0 %}
-        {{ row(label = 'Number of children', value = statementOfMeans.dependant.numberOfMaintainedChildren) }}
-      {% endif %}
+      {{ maintenanceSection(statementOfMeans.dependant.numberOfMaintainedChildren) }}
 
       {{ heading('Financial support') }}
-
-      {{ row(label = 'Do they support anyone else financially?', value = (statementOfMeans.dependant.otherDependants !== undefined) | renderYesNo, bottomBorder = not statementOfMeans.dependant.otherDependants) }}
-      {% if statementOfMeans.dependant.otherDependants %}
-        {{ row(label = 'Number of people', value = statementOfMeans.dependant.otherDependants.numberOfPeople, bottomBorder = false) }}
-        {{ row(label = 'Give details', value = statementOfMeans.dependant.otherDependants.details) }}
-      {% endif %}
+      {{ otherDependantsSection(statementOfMeans.dependant.otherDependants) }}
 
       {{ heading('Employment details') }}
-
-      {{ row(label = 'Do they have a job?', value = (statementOfMeans.employment.employers.length > 0) | renderYesNo, bottomBorder = false) }}
-      {{ employmentStatus(statementOfMeans) }}
-      {% if statementOfMeans.employment.employers.length > 0 %}
-        {% for employer in statementOfMeans.employment.employers %}
-          {{ row(label = 'Employer name', value = employer.name, bottomBorder = false) }}
-          {{ row(label = 'Job title', value = employer.jobTitle, bottomBorder = loop.index0 === statementOfMeans.employment.employers.length - 1) }}
-        {% endfor %}
-      {% endif %}
-
-      {{ heading('Self-employment details') }}
+      {{ employmentSection(statementOfMeans.employment) }}
 
       {% if statementOfMeans.employment.selfEmployment %}
-        {{ row(label = 'Job title', value = statementOfMeans.employment.selfEmployment.jobTitle, bottomBorder = false) }}
-        {{ row(label = 'Annual turnover', value = statementOfMeans.employment.selfEmployment.annualTurnover | numeral, bottomBorder = not statementOfMeans.employment.selfEmployment.onTaxPayments) }}
-        {{ row(label = 'Are you behind on tax payments?', value = (statementOfMeans.employment.selfEmployment.onTaxPayments !== undefined) | renderYesNo, bottomBorder = false) }}
-        {{ row(label = 'Amount they owe?', value = statementOfMeans.employment.selfEmployment.onTaxPayments.amountYouOwe | numeral, bottomBorder = false) }}
-        {{ row(label = 'Reason', value = statementOfMeans.employment.selfEmployment.onTaxPayments.reason) }}
+        {{ heading('Self-employment details') }}
+        {{ selfEmploymentSection(statementOfMeans.employment.selfEmployment) }}
       {% endif %}
 
       {{ heading('Monthly income') }}
-
-      {% for income in statementOfMeans.incomes %}
-        {{ row(label = income.type | renderIncomeType | capitalize, value = income.amountReceived | numeral, bottomBorder = loop.index0 === statementOfMeans.incomes.length - 1) }}
-      {% endfor %}
+      {{ monthlyIncomesSection(statementOfMeans.incomes) }}
 
       {{ heading('Monthly expenses') }}
-
-      {% for expense in statementOfMeans.expenses %}
-        {{ row(label = expense.type | renderExpenseType | capitalize, value = expense.amountPaid | numeral, bottomBorder = loop.index0 === statementOfMeans.incomes.length - 1) }}
-      {% endfor %}
+      {{ monthlyExpensesSection(statementOfMeans.expenses) }}
 
       {{ heading('Debts') }}
-
-      {{ row(label = 'Do you have any debts?', value = (statementOfMeans.debts !== undefined) | renderYesNo, bottomBorder = not statementOfMeans.debts) }}
-      {% for debtRow in statementOfMeans.debts %}
-        {% if statementOfMeans.debts.length === 1 %}
-          {{ row(label = 'Debt' , value = debtRow.description, bottomBorder = false) }}
-        {% else %}
-          {{ row(label = loop.index0 + 1 + '. Debt' , value = debtRow.description, bottomBorder = false) }}
-        {% endif %}
-        {{ row(label = 'Total owed', value = debtRow.totalOwed | numeral, bottomBorder = false) }}
-        {{ row(label = 'Monthly Payments', value = debtRow.monthlyPayments | numeral, bottomBorder = loop.index0 === statementOfMeans.debts.length - 1) }}
-      {% endfor %}
+      {{ debtsSection(statementOfMeans.debts) }}
 
       {{ heading('Court orders') }}
-
-      {{ row(label = 'Has a court ordered you to pay anyone else?', value = (statementOfMeans.courtOrders !== undefined) | renderYesNo, bottomBorder = not statementOfMeans.courtOrders) }}
-      {% for courtOrder in statementOfMeans.courtOrders %}
-        {{ row(label = 'Claim number', value = courtOrder.claimNumber, bottomBorder = false) }}
-        {{ row(label = 'Amount you owe', value = courtOrder.amountOwed | numeral, bottomBorder = loop.index0 === statementOfMeans.courtOrders.length - 1) }}
-      {% endfor %}
+      {{ courtOrdersSection(statementOfMeans.courtOrders) }}
     </div>
   </details>
 {% endmacro %}
